// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeWidget.vue greets user according to time of day and given name: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue renders compact header if displayCompactHeader is set to true: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (3)",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (3)",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) (2)",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (4)",
    "
",
    " at <BMediaAside",
    "right=false",
    "verticalAlign="top"",
    ">",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (5)",
    "
",
    " at <BMediaBody>",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue renders default header if displayCompactHeader is set to false: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation COMPONENT_FUNCTIONAL) Functional component <BJumbotron> should be defined as a plain function in Vue 3. The "functional" option has been removed. NOTE: Before migrating to use plain functions for functional components, first make sure that all async components usage have been migrated and its compat behavior has been disabled.
  Details: https://v3-migration.vuejs.org/breaking-changes/functional-components.html",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) vm.$listeners has been removed. In Vue 3, parent v-on listeners are included in vm.$attrs and it is no longer necessary to separately use v-on="$listeners" if you are already using v-bind="$attrs". (Note: the Vue 3 behavior only applies if this compat config is disabled)
  Details: https://v3-migration.vuejs.org/breaking-changes/listeners-removed.html",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) (2)",
    "
",
    " at <BAvatar",
    "variant="link"",
    "size="112px"",
    "src="my-avatar.jpg"",
    ">",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_SCOPED_SLOTS) vm.$scopedSlots has been removed. Use vm.$slots instead.
  Details: https://v3-migration.vuejs.org/breaking-changes/slots-unification.html",
    "
",
    " at <BAvatar",
    "variant="link"",
    "size="112px"",
    "src="my-avatar.jpg"",
    ">",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation INSTANCE_LISTENERS) (2)",
    "
",
    " at <BButton",
    "onClick=fn",
    "variant="primary"",
    "class="mt-2"",
    ">",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue returns an avatar source in the avatarSource computed property: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue sets greeting timeOfDay of compact header to: Afternoon, from hour 12 up until, and including, hour 17: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue sets greeting timeOfDay of compact header to: Evening, from hour 18 up until, and including, hour 23: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue sets greeting timeOfDay of compact header to: Morning, from hour 0 to 11: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BMedia>",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=true",
    "userDetails=",
    {
      "givenName": "Test",
    },
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`WelcomeWidget.vue updates route to Profile after clicking on the edit profile button: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: Property "$pinia" was accessed during render but is not defined on instance.",
    "
",
    " at <BJumbotron",
    "class="text-center"",
    ">",
    "
",
    " at <WelcomeWidget",
    "displayCompactHeader=false",
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
